--- a/office-admin/src/main/resources/application.yml
+++ b/office-admin/src/main/resources/application.yml
@@ -10,9 +10,9 @@ dycgb:
                 invoices: ${dycgb.office.file.path.base}invoices/
 spring:
     datasource:
-        url: jdbc:mysql://127.0.0.1:3306/dycgb_office?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false&serverTimezone=Asia/Shanghai
-        username: root
-        password: 123456
+        url: jdbc:mysql://212.64.75.211:3306/dycgb-office?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false&serverTimezone=Asia/Shanghai
+        username: dycgb
+        password: dycgb123@
     jpa:
         properties:
             hibernate:
