--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     </modules>
     <properties>
         <java.version>1.8</java.version>
+        <log4j2.version>2.16.0</log4j2.version>
     </properties>
     <dependencies>
         <dependency>
