--- a/office-admin/src/main/resources/application.yml
+++ b/office-admin/src/main/resources/application.yml
@@ -1,45 +1,3 @@
-dycgb:
-    office:
-        page:
-            pageSize: 20
-        file:
-            path:
-                base: /Users/myhe/IdeaProjects/dycgb/files/
-                account-details: ${dycgb.office.file.path.base}account-details/
-                goods: ${dycgb.office.file.path.base}goods/
-                invoices: ${dycgb.office.file.path.base}invoices/
 spring:
-    datasource:
-        url: jdbc:mysql://127.0.0.1:3306/dycgb_office?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false&serverTimezone=Asia/Shanghai
-        username: root
-        password: 123456
-    jpa:
-        properties:
-            hibernate:
-                hbm2ddl:
-                    auto: update
-                    dialect: org.hibernate.dialect.MySQL5InnoDBDialect
-        show-sql: true
-    jackson:
-        date-format: yyyy-MM-dd HH:mm:ss
-        time-zone: GMT+8
-    mvc:
-        hiddenmethod:
-            filter:
-                enabled: true
-
-    #thymeleaf模板配置
-    thymeleaf:
-        cache: false
-        enabled: true
-        prefix: classpath:/templates/
-        suffix: .html
-        #严格执行H5标准
-        mode: LEGACYHTML5
-        encoding: UTF-8
-        servlet:
-            content-type: text/html
-server:
-    servlet:
-        context-path: /office/admin
-    port: 8081
+    profiles:
+        active: local
